Se agregaron los imports

--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using P1_AP1_JorgeMoya
 @using P1_AP1_JorgeMoya.Components
+@using P1_AP1_JorgeMoya.Models
+@using P1_AP1_JorgeMoya.Services
