--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -15,7 +15,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/Registro/Index">
+            <NavLink class="nav-link" href="/Entradas/Index">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Registros
             </NavLink>
         </div>
