Cambios en el nombre (ctrl + rr)

--- a/Components/Pages/RegistroPages/RegistroIndex.razor
+++ b/Components/Pages/RegistroPages/RegistroIndex.razor
@@ -1,4 +1,8 @@
-﻿@page "/Registro/Index"
+﻿@page "/Entradas/Index"
+@inject EntradasService entradasService
+@inject NavigationManager navigationManager
+@rendermode InteractiveServer
+
 
 @code {
 
