Se coloco la cabeza de las pages

--- a/Components/Pages/EntradasPages/EntradasCreate.razor
+++ b/Components/Pages/EntradasPages/EntradasCreate.razor
@@ -1,4 +1,8 @@
-﻿<h3>EntradasCreate</h3>
+﻿@page "/Entradas/Create"
+@inject EntradasService entradasService
+@inject NavigationManager navigationManager
+@rendermode InteractiveServer
+
 
 @code {
 
