--- a/Components/Pages/EntradasPages/EntradasCreate.razor
+++ b/Components/Pages/EntradasPages/EntradasCreate.razor
@@ -3,7 +3,70 @@
 @inject NavigationManager navigationManager
 @rendermode InteractiveServer
 
+<div class="container mt-3">
+	<div class="card shadow-lg">
+		<div class="card-header">
+			<h5 class="card-title text-center"> <strong> Crear Entrada </strong> </h5>
+		</div>
+
+		<div class="card-body">
+			<EditForm Model="Entrada" OnValidSubmit="GuardarEntrada"> 
+				<DataAnnotationsValidator/>
+				<div class="row">
+					<div class="col-12 col-md-3 mb-3">
+						<label class="col-form-label"> <strong> Entrada Id: </strong></label>
+						<InputNumber class="form-control" @bind-Value = "Entrada.IdEntrada" disabled />
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-12 col-md-3 mb-3">
+						<label class="col-form-label"> <strong> Nombre cliente: </strong></label>
+						<InputText class="form-control" @bind-Value="Entrada.NombreCliente" />
+						<ValidationMessage For="() => Entrada.NombreCliente"> </ValidationMessage>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-12 col-md-3 mb-3">
+						<label class="col-form-label"> <strong> Cantidad: </strong></label>
+						<InputNumber class="form-control" @bind-Value="Entrada.Cantidad"/>
+						<ValidationMessage For="() => Entrada.Cantidad"> </ValidationMessage>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-12 col-md-3 mb-3">
+						<label class="col-form-label"> <strong> Precio: </strong></label>
+						<InputNumber class="form-control" @bind-Value="Entrada.Precio"/>
+						<ValidationMessage For="() => Entrada.Precio"> </ValidationMessage>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-12 col-md-3 mb-3">
+						<label class="col-form-label"> <strong> Fecha: </strong></label>
+						<InputDate class="form-control" @bind-Value="Entrada.Fecha"/>
+					</div>
+				</div>
+
+				<div class="card-footer d-flex justify-content-center gap-2 bg-white">
+					<button type="submit" class="btn btn-primary bi bi-floppy"> Guardar </button>
+					<a href="/Entradas/Index" class="btn btn-secondary bi bi-arrow-left"> Regresar </a>
+				</div>
+			</EditForm>
+		</div>
+	</div>
+</div>
 
 @code {
+	public EntradasHuacales Entrada = new();
 
+	public async Task GuardarEntrada ()
+	{
+		if (await entradasService.Guardar(Entrada))
+		{
+			navigationManager.NavigateTo("/Entradas/Index");
+		}
+	}
 }
