Se agrego pagetitle a create

--- a/Components/Pages/EntradasPages/EntradasCreate.razor
+++ b/Components/Pages/EntradasPages/EntradasCreate.razor
@@ -3,6 +3,8 @@
 @inject NavigationManager navigationManager
 @rendermode InteractiveServer
 
+<PageTitle> Create </PageTitle>
+
 <div class="container mt-3">
 	<div class="card shadow-lg">
 		<div class="card-header">
