--- a/Components/Pages/EntradasPages/EntradasIndex.razor
+++ b/Components/Pages/EntradasPages/EntradasIndex.razor
@@ -31,7 +31,7 @@
 				<div class="col-12 col-md-3 mb-3">
 					<label class="col-form-label"> <strong> Filtrar por: </strong></label>
 					<InputSelect class="form-select" @bind-Value="filtro"> 
-						<option value="IdEntrada"> IdEntrada </option>
+						<option value="IdEntrada"> Entrada Id </option>
 						<option value="NombreCliente"> Nombre </option>
 						<option value="Cantidad"> Cantidad </option>
 						<option value="Precio"> Precio </option>
@@ -71,8 +71,8 @@
 					{
 						<tr>
 							<td> @entrada.IdEntrada</td>
-							<td> @entrada.NombreCliente</td>
-							<td> @entrada.Cantidad</td>
+							<td> @entrada.NombreCliente </td>
+							<td> @entrada.Cantidad </td>
 							<td> @entrada.Precio.ToString("F2")</td>
 							<td> @entrada.Fecha.ToShortDateString()</td>
 							<td> <a href="/Entradas/Edit/@entrada.IdEntrada" class="btn btn-outline-info bi bi-pencil"> </a></td>
