Sumatoria modificada a la cantidad

--- a/Components/Pages/EntradasPages/EntradasIndex.razor
+++ b/Components/Pages/EntradasPages/EntradasIndex.razor
@@ -84,7 +84,7 @@
 		</div>
 		<div class="card-footer space-between">
 			<label> <strong> Conteo Entradas: </strong> @ListaEntradas.Count</label>
-			<label> <strong> Total: </strong> @ListaEntradas.Sum(a=> a.Precio).ToString("F2")</label>
+			<label> <strong> Total: </strong> @ListaEntradas.Sum(a=> a.Cantidad).ToString("F2")</label>
 		</div>
 	</div>
 </div>
