Se agrego la o en el boton del modal

--- a/Components/Pages/EntradasPages/EntradasEdit.razor
+++ b/Components/Pages/EntradasPages/EntradasEdit.razor
@@ -90,7 +90,7 @@ else
 				</div>
 
 				<div class="modal-footer gap-2 bg-white d-flex justify-content-center">
-					<button type="button" class="btn btn-danger bi bi-trash" @onclick ="EliminarEntrada"> Si, dese eliminar </button>
+					<button type="button" class="btn btn-danger bi bi-trash" @onclick ="EliminarEntrada"> Si, deseo eliminar </button>
 					<button type="button" class="btn btn-secondary bi bi-arrow-left" @onclick = "() => mostrarModal = false"> Regresar </button>
 				</div>
 			</div>
