En el thead ahora dice entrada Id

--- a/Components/Pages/EntradasPages/EntradasIndex.razor
+++ b/Components/Pages/EntradasPages/EntradasIndex.razor
@@ -52,7 +52,7 @@
 				<table class="table table-hover text-center">
 					<thead class="table table-striped">
 						<tr> 
-							<th> IdEntrada </th>
+							<th> Entrada Id </th>
 							<th> Nombre Cliente </th>
 							<th> Cantidad </th>
 							<th> Precio </th>
