Se modifico la page con la variable de abajo

--- a/Components/Pages/EntradasPages/EntradasEdit.razor
+++ b/Components/Pages/EntradasPages/EntradasEdit.razor
@@ -1,4 +1,4 @@
-﻿@page "/Entradas/Edit/{idEntrada:int}"
+﻿@page "/Entradas/Edit/{IdEntrada:int}"
 @inject EntradasService entradasService
 @inject NavigationManager navigationManager
 @rendermode InteractiveServer
