Cambios en la sumatoria, se quito el f2, y se coloco el label total cantidad

--- a/Components/Pages/EntradasPages/EntradasIndex.razor
+++ b/Components/Pages/EntradasPages/EntradasIndex.razor
@@ -83,8 +83,8 @@
 			</div>
 		</div>
 		<div class="card-footer space-between">
-			<label> <strong> Conteo Entradas: </strong> @ListaEntradas.Count</label>
-			<label> <strong> Total: </strong> @ListaEntradas.Sum(a=> a.Cantidad).ToString("F2")</label>
+			<label> <strong> Conteo entradas: </strong> @ListaEntradas.Count</label>
+			<label> <strong> Total cantidad: </strong> @ListaEntradas.Sum(a=> a.Cantidad)</label>
 		</div>
 	</div>
 </div>
