--- a/Components/Pages/EntradasPages/EntradasIndex.razor
+++ b/Components/Pages/EntradasPages/EntradasIndex.razor
@@ -84,7 +84,7 @@
 		</div>
 		<div class="card-footer space-between">
 			<label> <strong> Conteo entradas: </strong> @ListaEntradas.Count</label>
-			<label> <strong> Total cantidad: </strong> @ListaEntradas.Sum(a=> a.Cantidad * a.Precio).ToString("F2")</label>
+			<label> <strong> Total obtenido: </strong> @ListaEntradas.Sum(a=> a.Cantidad * a.Precio).ToString("F2")</label>
 		</div>
 	</div>
 </div>
