--- a/Components/Pages/EntradasPages/EntradasIndex.razor
+++ b/Components/Pages/EntradasPages/EntradasIndex.razor
@@ -82,7 +82,7 @@
 				</table>
 			</div>
 		</div>
-		<div class="card-footer space-between">
+		<div class="card-footer space-between bg-white">
 			<label> <strong> Conteo entradas: </strong> @ListaEntradas.Count</label>
 			<label> <strong> Total obtenido: </strong> @ListaEntradas.Sum(a=> a.Cantidad * a.Precio).ToString("F2")</label>
 		</div>
