--- a/Components/Pages/EntradasPages/EntradasIndex.razor
+++ b/Components/Pages/EntradasPages/EntradasIndex.razor
@@ -83,8 +83,8 @@
 			</div>
 		</div>
 		<div class="card-footer space-between bg-white">
-			<label> <strong> Conteo entradas: </strong> @ListaEntradas.Count</label>
-			<label> <strong> Total importe: </strong> @ListaEntradas.Sum(a=> a.Cantidad * a.Precio).ToString("F2")</label>
+			<label> <strong> Total cantidad: </strong> @ListaEntradas.Sum(a => a.Cantidad) </label>
+			<label> <strong> Total importe: </strong> @ListaEntradas.Sum(a=> a.Cantidad * a.Precio).ToString("F2") </label>
 		</div>
 	</div>
 </div>
