--- a/Components/Pages/EntradasPages/EntradasIndex.razor
+++ b/Components/Pages/EntradasPages/EntradasIndex.razor
@@ -76,7 +76,7 @@
 							<td> @entrada.Cantidad </td>
 							<td> @entrada.Precio.ToString("F2") </td>
 							<td> @entrada.Fecha.ToShortDateString()</td>
-							<td> <a href="/Entradas/Edit/@entrada.IdEntrada" class="btn btn-outline-info bi bi-pencil"> </a></td>
+							<td> <a href="/Entradas/Edit/@entrada.IdEntrada" class="btn btn-outline-info bi bi-pencil-square"> </a></td>
 						</tr>
 					}
 				</table>
