Se agrego el elija una opcion en el select, pero deshabilitado para que el usuario este claro de que debe interactuar

--- a/Components/Pages/EntradasPages/EntradasIndex.razor
+++ b/Components/Pages/EntradasPages/EntradasIndex.razor
@@ -32,6 +32,7 @@
 				<div class="col-12 col-md-3 mb-3">
 					<label class="col-form-label"> <strong> Filtrar por: </strong></label>
 					<InputSelect class="form-select" @bind-Value="filtro"> 
+						<option value="" selected disabled> Elija una opcion </option>
 						<option value="IdEntrada"> Entrada Id </option>
 						<option value="NombreCliente"> Nombre </option>
 						<option value="Cantidad"> Cantidad </option>
