--- a/Components/Pages/EntradasPages/EntradasIndex.razor
+++ b/Components/Pages/EntradasPages/EntradasIndex.razor
@@ -65,7 +65,7 @@
 					@if(ListaEntradas.Count == 0)
 					{
 						<tr>
-							<td colspan="5"> No se han encontrado ntradas</td>
+							<td colspan="5"> No se han encontrado entradas </td>
 						</tr>
 					}
 
