Se cambio la clase a modal-title

--- a/Components/Pages/EntradasPages/EntradasEdit.razor
+++ b/Components/Pages/EntradasPages/EntradasEdit.razor
@@ -76,7 +76,7 @@ else
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="card-header mx-auto"> <strong> Confirmar Eliminacion </strong></h5>
+					<h5 class="modal-title mx-auto"> <strong> Confirmar Eliminacion </strong></h5>
 				</div>
 
 				<div class="modal-body">
