En los footers se modifico la clase a text-center para mayor entendimiento del programador

--- a/Components/Pages/EntradasPages/EntradasCreate.razor
+++ b/Components/Pages/EntradasPages/EntradasCreate.razor
@@ -53,7 +53,7 @@
 					</div>
 				</div>
 
-				<div class="card-footer d-flex justify-content-center gap-2 bg-white">
+				<div class="card-footer text-center gap-2 bg-white">
 					<button type="submit" class="btn btn-primary bi bi-floppy"> Guardar </button>
 					<a href="/Entradas/Index" class="btn btn-secondary bi bi-arrow-left"> Regresar </a>
 				</div>
