--- a/Components/Pages/EntradasPages/EntradasEdit.razor
+++ b/Components/Pages/EntradasPages/EntradasEdit.razor
@@ -41,7 +41,7 @@
 					<div class="row">
 						<div class="col-12 col-md-3 mb-3">
 							<label class="col-form-label"> <strong> Cantidad: </strong></label>
-							<InputNumber class="form-control" @bind-Value="Entrada.Cantidad" />
+							<InputNumber class="form-control" @bind-Value="Entrada.Cantidad" @bind-Value:after="CalcularImporte"/>
 							<ValidationMessage For="() => Entrada.Cantidad"> </ValidationMessage>
 						</div>
 					</div>
@@ -49,8 +49,15 @@
 					<div class="row">
 						<div class="col-12 col-md-3 mb-3">
 							<label class="col-form-label"> <strong> Precio: </strong></label>
-							<InputNumber class="form-control" @bind-Value="Entrada.Precio" />
+							<InputNumber class="form-control" @bind-Value="Entrada.Precio" @bind-Value:after="CalcularImporte"/>
 							<ValidationMessage For="() => Entrada.Precio"> </ValidationMessage>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-12 col-md-3 mb-3">
+							<label class="col-form-label"> <strong> Importe: </strong> </label>
+							<InputNumber class="form-control" @bind-Value="Importe" readonly />
 						</div>
 					</div>
 
@@ -105,6 +112,13 @@ else
 	public EntradasHuacales? Entrada { get; set; }
 
 	public bool mostrarModal { get; set; } = false;
+
+	public double Importe { get; set; }
+
+	private void CalcularImporte()
+	{
+		Importe = Entrada.Cantidad * Entrada.Precio;
+	}
 
 	protected override async Task OnInitializedAsync()
 	{
