--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -2,6 +2,6 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1> Jorge Ariel Moya de Peña (2023-0531) </h1>
 
 Welcome to your new app.
