Se agrego lo correspondiente al toastService en cada archivo

--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -10,3 +10,6 @@
 @using P1_AP1_JorgeMoya.Components
 @using P1_AP1_JorgeMoya.Models
 @using P1_AP1_JorgeMoya.Services
+@using BlazorBootstrap;
+@using P1_AP1_JorgeMoya.Extensors
+
