--- a/Components/Pages/EntradasPages/EntradasCreate.razor
+++ b/Components/Pages/EntradasPages/EntradasCreate.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Entradas/Create"
 @inject EntradasService entradasService
 @inject NavigationManager navigationManager
+@inject ToastService toastService
 @rendermode InteractiveServer
 
 <PageTitle> Create </PageTitle>
