--- a/Components/Pages/EntradasPages/EntradasEdit.razor
+++ b/Components/Pages/EntradasPages/EntradasEdit.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Entradas/Edit/{IdEntrada:int}"
 @inject EntradasService entradasService
 @inject NavigationManager navigationManager
+@inject ToastService toastService
 @rendermode InteractiveServer
 
 <PageTitle> Edit </PageTitle>
