--- a/Components/Pages/EntradasPages/EntradasIndex.razor
+++ b/Components/Pages/EntradasPages/EntradasIndex.razor
@@ -55,9 +55,9 @@
 						<tr> 
 							<th> Entrada Id </th>
 							<th> Nombre Cliente </th>
-							<th> Cantidad </th>
-							<th> Precio </th>
-							<th> Importe </th>
+							<th> Total Cantidad </th>
+							<th> Total Precio </th>
+							<th> Total Importe </th>
 							<th> Fecha </th>
 							<th> Opciones </th>
 						</tr>
@@ -75,9 +75,9 @@
 						<tr>
 							<td> @entrada.IdEntrada</td>
 							<td> @entrada.NombreCliente </td>
-							<td> @entrada.Cantidad </td>
-							<td> @entrada.Precio.ToString("F2") </td>
-							<td> @((entrada.Precio * entrada.Cantidad).ToString("F2")) </td>
+							<td> @entrada.EntradasHuacalesDetalles.Sum(d => d.Cantidad) </td>
+							<td> @entrada.EntradasHuacalesDetalles.Sum(d => d.Precio).ToString("F2") </td>
+							<td> @entrada.EntradasHuacalesDetalles.Sum(d => d.Precio * d.Cantidad) </td>
 							<td> @entrada.Fecha.ToShortDateString()</td>
 							<td> <a href="/Entradas/Edit/@entrada.IdEntrada" class="btn btn-outline-info bi bi-pencil-square"> </a></td>
 						</tr>
@@ -91,6 +91,7 @@
 		</div>
 	</div>
 </div>
+
 @code {
 	public DateTime? desde { get; set; }
 
