--- a/Components/Pages/EntradasPages/EntradasEdit.razor
+++ b/Components/Pages/EntradasPages/EntradasEdit.razor
@@ -89,7 +89,7 @@
 					}
 
 					<div class="card-footer d-flex justify-content-center gap-2 bg-white">
-						<button type="submit" class="btn btn-primary bi bi-floppy"> Guardar </button>
+						<button type="submit" class="btn btn-primary bi bi-floppy" @onclick = "GuardarEntrada"> Guardar </button>
 						<button type="button" class="btn btn-danger bi bi-trash" @onclick="() => mostrarModal = true"> Eliminar </button>
 						<a href="/Entradas/Index" class="btn btn-secondary bi bi-arrow-left"> Regresar </a>
 					</div> 
